[package]
name = "enrichmail"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mail-parser = "0.8.2"
mail-builder = "0.2.5"
comrak = "0.18.0"
base64 = "0.21.0"
clap = "4.2.4"
imap = "2.4.1"
native-tls = "0.2.11"
